src/objects/FSTR__PCE_Step_Assignment__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object holds a record of a step that has been assigned to someone with a  re-assignment rule associated with it.</description>
    <fields>
        <fullName>FSTR__Assignment_Time__c</fullName>
        <inlineHelpText>The date and time this record was assigned.</inlineHelpText>
        <label>Assignment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Needs_Reassignment__c</fullName>
        <formula>IF(ISPICKVAL(FSTR__PCE_Step_Reassignment__r.FSTR__Interval_Unit__c, &quot;Days&quot;),(NOW() - FSTR__Assignment_Time__c) &gt; FSTR__PCE_Step_Reassignment__r.FSTR__Interval__c, IF(ISPICKVAL(FSTR__PCE_Step_Reassignment__r.FSTR__Interval_Unit__c, &quot;Minutes&quot;), ((NOW() - FSTR__Assignment_Time__c) * 1440)&gt; FSTR__PCE_Step_Reassignment__r.FSTR__Interval__c,
IF(ISPICKVAL(FSTR__PCE_Step_Reassignment__r.FSTR__Interval_Unit__c, &quot;Hours&quot;), ((NOW() - FSTR__Assignment_Time__c) * 24)&gt; FSTR__PCE_Step_Reassignment__r.FSTR__Interval__c,
False)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If we have exceeded the reassignment interval then this box will indicate that the step needs to be assigned to the next assignment option.</inlineHelpText>
        <label>Needs Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step_Reassignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reassignment rule that this assignment belongs to.</inlineHelpText>
        <label>Step Reassignment</label>
        <referenceTo>FSTR__PCE_Step_Reassignment__c</referenceTo>
        <relationshipLabel>Step Assignments</relationshipLabel>
        <relationshipName>PCE_Step_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Step this assignment belongs to.</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Assignments</relationshipLabel>
        <relationshipName>PCE_Step_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <inlineHelpText>id of the object that this assignment applies to</inlineHelpText>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Object_Type__c</fullName>
        <inlineHelpText>api name of the object this assignment applies to.  Will be used in combination witht he step id field to query for the records that need to be updated.</inlineHelpText>
        <label>Step Object Type</label>
        <type>TextArea</type>
    </fields>
    <label>Step Assignment</label>
    <nameField>
        <displayFormat>PSA-{00000}</displayFormat>
        <label>Step Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>